--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A web app created to simulate a digital art storefront. Created by Michael Slaton."
     />
-    <title>Art Shop</title>
+    <title>
+      Digital Art Shop
+    </title>
   </head>
   <body>
     <div id="root"></div>
